--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,9 @@
-<h1>Home Page</h1>
-
-<%= link_to 'Alpha Blog',articles_path %> | <%= link_to 'About',about_path %>
+<div class="jumbotron">
+  <h1 class="display-4">Hello, world!</h1>
+  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <hr class="my-4">
+  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p class="lead">
+  <%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg", role: "button" %>
+  </p>
+</div>
