--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,21 @@
 
 
 // Custom bootstrap variables must be set or imported *before* bootstrap.
-@import "bootstrap"
+@import "bootstrap";
 
+.jumbotron {
+  background-image: asset-url('jumbotron.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
+}
+footer {
+  .nav {
+    
+  }
+  .copyright {
+    text-align: center;
+    padding-bottom: 24px;
+  }
+}
