--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <%= render 'layouts/navigation' %>
   <%= render 'layouts/messages' %>
   <%= yield %>
+  <%= render 'layouts/footer' %>
 </body>
 
 </html>
