--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,8 +11,11 @@
   width: 100%;
 }
 footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   .nav {
-    
+        
   }
   .copyright {
     text-align: center;
