--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,7 +1,14 @@
-<% flash.each do |name, msg| %>
-  <ul>
-    <li>
-      <%= msg %>
-    </li>
-  </ul>
-<% end %>
+<div class="row">
+  <div class="col-12">
+    <% flash.each do |name, msg| %>
+      <div class='alert alert-<%="#{name}"%>' role="alert">
+        <%= content_tag :span, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <% end %>
+  </div>
+</div>
+
+
