--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,29 +1,25 @@
-<h1>
+<h1 align="center">
   Listing all articles
 </h1>
-<%= link_to "Create new article", new_article_path %>
-  <table>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-    </tr>
+<div class="row"></div>
+<div class="col-12"></div>
+<div class="card-deck">
     <% @articles.each do |article| %>
-      <tr>
-        <td>
-          <%= article.title %>
-        </td>
-        <td>
-          <%= article.description %>
-        </td>
-        <td>
-          <%= link_to 'Edit', edit_article_path(article) %>
-        </td>
-        <td>
-          <%= link_to 'Show', article_path(article) %>
-        </td>
-        <td>
-          <%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "Are you sure?"} %>
-        </td>
-      </tr>
-      <% end %>
-  </table>
+     
+        <div class="card w-50">
+          <div class="card-header">
+              <%= article.title %>
+          </div>
+          <div class="card-body">
+              <%= truncate(article.description, length: 100) %>
+          </div>
+          <div class="card-footer">
+            <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
+              <%= link_to "Delete this article", article_path(article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"}, class: "btn btn-xs btn-danger" %>
+          </div>
+        </div>
+        <% end %>
+      </div>
+     
+    </div>
+    </div>
