--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,32 +1,3 @@
-<%= render 'shared/errors', obj: @user %>
-  <div class="row">
-    <div class="col-12">
-      <%= form_for @user do |f| %>
-        <div class="form-group">
-          <label for="title">
-            <%= f.label :username %>
-          </label>
-          <%= f.text_field :username, class:"form-control", id:"username", placeholder:"Enter username"%>
-        </div>
-        <div class="form-group">
-          <label for="email">
-            <%= f.label :email %>
-          </label>
-          <%= f.email_field :email, class:"form-control", id:"email", placeholder:"Enter email"%>
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> 
-        </div>
-        <div class="form-group">
-          <label for="passsword">
-            <%= f.label :password %>
-          </label>
-          <%= f.password_field :password, class:"form-control", id:"password", placeholder:"Enter password"%>
-            <small id="passwordHelp" class="form-text text-muted">Make sure it is secure!</small>
-        </div>
-        <%= f.submit "Sign up",class:"btn btn-primary" %>
-          <%= link_to "Cancel", articles_path, class:"btn btn-danger" %>
-            <% end %>
-
-    </div>
-  </div>
-
+<h1 align="center">New account</h1>
+<%= render 'form' %>
   
