--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,5 +1,5 @@
-<div class="row"></div>
-<div class="col-12"></div>
+<div class="row">
+<div class="col-12">
 <div class="card-deck">
   <% obj.each do |article| %>
 
