--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,31 @@
+<h1 align="center">
+  Show
+</h1>
+<div class="row">
+  <div class="col-sm-4">
+    <div class="card-deck">
+      <% @users.each do |user| %>
+        <% if @article.user %>
+        <div class="card">
+          <%= link_to gravatar_for(@article.user), user_path(@article.user), class: 'card-img-top' %>
+
+            <div class="card-body">
+
+              <h5 class="card-title">
+                <%= link_to @article.user.username, user_path(@article.user) %>
+              </h5>
+              <small class="text-muted"><%= pluralize(@article.user.articles.count,"articles") if @article.user.articles %></small>
+            </div>
+
+        </div>
+        <% end %>
+        <% end %>
+    </div>
+
+  </div>
 
 
-
+<div class="col-sm-8">
 <div class="card">
   <h5 class="card-header">Title:
   <%= @article.title %></h5>
@@ -13,4 +38,4 @@
       <%= link_to "Delete this article", article_path(@article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"}, class: "btn btn-xs btn-danger" %>
         <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success"%>
   </div>
-</div>
+</div></div></div>
