--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -13,10 +13,12 @@
               last update <%= time_ago_in_words(article.updated_at) %> ago</small>
 
       </div>
+      <% if logged_in? && current_user == article.user %>
       <div class="card-footer">
         <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
           <%= link_to "Delete this article", article_path(article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"}, class: "btn btn-xs btn-danger" %>
       </div>
+      <% end %>
     </div>
     <% end %>
 </div>
