--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,4 +2,12 @@
 <h1 align="center">
   Listing all articles
 </h1>
+<div align="center">
+  <%= will_paginate(@articles, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'justify-content-center') %>
+
+</div>
 <%= render 'article', obj: @articles %>
+<div align="center">
+  <%= will_paginate(@articles, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'justify-content-center') %>
+
+</div>
