--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,6 @@
 <div class="row">
   <div class="col-sm-4">
     <div class="card-deck">
-      <% @users.each do |user| %>
         <% if @article.user %>
         <div class="card">
           <%= link_to gravatar_for(@article.user), user_path(@article.user), class: 'card-img-top' %>
@@ -19,7 +18,6 @@
 
         </div>
         <% end %>
-        <% end %>
     </div>
 
   </div>
@@ -33,9 +31,13 @@
     <h5 class="card-title">Description</h5>
     <p class="card-text"><%= simple_format(@article.description) %></p>  
   </div>
+  
   <div class="card-footer">
+    <% if logged_in? && current_ser == @article.user %>
     <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
-      <%= link_to "Delete this article", article_path(@article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"}, class: "btn btn-xs btn-danger" %>
-        <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success"%>
+    <%= link_to "Delete this article", article_path(@article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"}, class: "btn btn-xs btn-danger" %>
+    <% end %>
+    <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success"%>
   </div>
+  <% end %>
 </div></div></div>
