--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,6 +13,9 @@
             
             <h5 class="card-title"><%= link_to user.username, user_path(user) %></h5>
               <small class="text-muted"><%= pluralize(user.articles.count,"articles") if user.articles %></small>
+              <% if logged_in? and current_user.admin? %>
+                <%= link_to "Delete this user", user_path(user), class:"btn btn-danger", method: :delete, data: { confirm: "Are you sure you want to delete the user and all their articles"} %>
+              <% end %>
           </div>
        
         </div>
