--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,16 +9,30 @@
   background-position: center;
   height: 100vh;
   width: 100%;
+  text-align: center;
+  border-radius: 0;
+  padding-top: 12em;
+  color: white;
+  .btn {
+    margin-top: 3em;
+  }
+}
+.navbar-nav {
+  .nav-item {
+    margin-left: 24px;
+  }
+}
+.container {
+  padding-top: 80px;
 }
 footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+  // position: absolute;
+  // bottom: 0;
+  // width: 100%;
+  
   .nav {
-        
+       background: #fff;
+       padding-bottom: 24px;
   }
-  .copyright {
-    text-align: center;
-    padding-bottom: 24px;
-  }
+ 
 }
