--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,6 @@
-<div class="container-fluid">
+
 <footer class="footer">
-  
-  <ul class="nav justify-content-center">
+  <ul class="nav">
     <li class="nav-item">
       <%= link_to "About", about_path, class:"nav-link" %>
     </li>
@@ -15,8 +14,4 @@
       <a class="nav-link disabled" href="#">Disabled</a>
     </li>
   </ul>
-  <small class="copyright">
-    Copyright &copy; Andrew Mason
-  </small>
 </footer>
-</div>
