--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,17 +1,14 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <!-- <a class="navbar-brand" id="logo" href="#">Alpha Blog</a> -->
-  <%= link_to "Alpha blog", root_path, class:"navbar-brand", id:"logo" %>
-  <form class="form-inline my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-  </form>
+  <%= link_to "Alpha Blog", root_path, class:"navbar-brand", id:"logo" %>
+  
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+  <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+    <ul class="navbar-nav ">
       <li class="nav-item">
         <%= link_to "Articles", articles_path, class:"nav-link" %>
       </li>
@@ -26,9 +23,6 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <%= link_to "New Article", new_article_path, class:"dropdown-item" %>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -39,16 +33,19 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <%= link_to "Edit your profile", edit_user_path(current_user), class:"dropdown-item" %>
             <%= link_to "View your profile", user_path(current_user), class:"dropdown-item" %>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+          
         </div>
       </li>
       <li class="nav-item">
         <%= link_to "Log out", logout_path, method: :delete, class:"nav-link" %>
       </li>
       <% else %>
-        <%= link_to "Log in", login_path, class:"nav-link" %>
-        <%= link_to "Sign up", signup_path, class:"nav-link" %>
+      <li class="nav-item">
+        <%= link_to "Log in", login_path, class:"btn btn-outline-primary" %>
+    </li>
+    <li class="nav-item">
+        <%= link_to "Sign up", signup_path, class:"btn btn-outline-success" %>
+        </li>
       <% end %>
     </ul>
     
