--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/errors', obj: @user %>
   <div class="row">
-    <div class="col-12">
+    <div class="col-sm-6 offset-sm-3">
       <%= form_for @user do |f| %>
         <div class="form-group">
           <label for="title">
