--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
   Listing all articles
 </h1>
 <div class="row">
-  <div class="col-12">
+  <div class="col-sm-6 offset-sm-3">
     <div class="card-deck">
       <% @users.each do |user| %>
 
