--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   Welcome to <%= @user.username %>'s page
 </h1>
 <div class="row">
-  <div class="col-12">
+  <div class="col-sm-6 offset-sm-3">
     <%= gravatar_for @user, size: 150 %>
   <h4 align="center">
     <%= @user.username %>'s articles</h4>
