--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 
 <footer class="footer">
-  <ul class="nav">
+  <ul class="nav bg-dark">
     <li class="nav-item">
       <%= link_to "About", about_path, class:"nav-link" %>
     </li>
