--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,8 @@
-<h1 align="center">New account</h1>
-<%= render 'form' %>
-  
+<div class="container-fluid form-b">
+  <div class="row">
+    <div class="col-sm-6 offset-sm-3 form-b-card">
+      <h1 align="center">New account</h1>
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
