--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,27 +1,24 @@
-<div class="row">
-<div class="col-12">
-<div class="card-deck">
-  <% obj.each do |article| %>
 
-    <div class="card w-50">
-      <div class="card-header">
-        <%= article.title %>
-      </div>
-      <div class="card-body">
-        <%= truncate(article.description, length: 100) %>
-          <small>Created by: <%= article.user.username if article.user %>,
+      <div class="card-deck articles-list-cards">
+        <% obj.each do |article| %>
+          <div class="col-sm-6 col-md-6 col-lg-4">
+            <div class="card">
+              <div class="card-header">
+                <%= article.title %>
+              </div>
+              <div class="card-body">
+                <%= truncate(article.description, length: 100) %>
+                  <small>Created by: <%= article.user.username if article.user %>,
               last update <%= time_ago_in_words(article.updated_at) %> ago</small>
 
+              </div>
+              <% if logged_in? && (current_user == article.user || current_user.admin?)%>
+                <div class="card-footer">
+                  <%= link_to "Edit", edit_article_path(article), class: "btn btn-xs btn-primary" %>
+                    <%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"}, class: "btn btn-xs btn-danger" %>
+                </div>
+                <% end %>
+            </div>
+          </div>
+          <% end %>
       </div>
-      <% if logged_in? && (current_user == article.user || current_user.admin?)%>
-      <div class="card-footer">
-        <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
-          <%= link_to "Delete this article", article_path(article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"}, class: "btn btn-xs btn-danger" %>
-      </div>
-      <% end %>
-    </div>
-    <% end %>
-</div>
-
-</div>
-</div>
