--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,9 @@
+<div class="container-fluid form-b">
+  <div class="row">
+    <div class="col-sm-6 offset-sm-3 form-b-card">
 <h1>Edit existing articles</h1>
 
 <%= render 'form' %>
+    </div>
+    </div>  
+    </div>  
