--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,6 @@
-
+<div class="container-fluid articles-list">
+  <div class="row">
+    <div class="col-12 ">
 <h1 align="center">
   Listing all articles
 </h1>
@@ -11,3 +13,7 @@
   <%= will_paginate(@articles, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'justify-content-center') %>
 
 </div>
+    </div>
+    </div>
+    </div>
+    
