--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,13 @@
+<div class="container-fluid show-articles">
 <h1 align="center">
   Show
 </h1>
-<div class="row">
-  <div class="col-sm-4">
+<div class="row show-articles-row">
+  <div class="col-lg-2 col-md-3">
     <div class="card-deck">
-        <% if @article.user %>
+      <% if @article.user %>
         <div class="card">
-          <%= link_to gravatar_for(@article.user), user_path(@article.user), class: 'card-img-top' %>
+          <%= link_to gravatar_for(@article.user), user_path(@article.user), class: "card-img-top" %>
 
             <div class="card-body">
 
@@ -23,21 +24,27 @@
   </div>
 
 
-<div class="col-sm-8">
-<div class="card">
-  <h5 class="card-header">Title:
-  <%= @article.title %></h5>
-  <div class="card-body">
-    <h5 class="card-title">Description</h5>
-    <p class="card-text"><%= simple_format(@article.description) %></p>  
+  <div class="col-lg-10 col-md-9">
+    <div class="card">
+      <h5 class="card-header">Title:
+        <%= @article.title %>
+      </h5>
+      <div class="card-body">
+        <h5 class="card-title">Description</h5>
+        <p class="card-text">
+          <%= simple_format(@article.description) %>
+        </p>
+      </div>
+
+      <div class="card-footer">
+        <% if logged_in? && current_user == @article.user || current_user.admin? %>
+          <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+            <%= link_to "Delete this article", article_path(@article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"}, class: "btn btn-xs btn-danger" %>
+              <% end %>
+                <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success"%>
+      </div>
+      
+    </div>
   </div>
-  
-  <div class="card-footer">
-    <% if logged_in? && current_user == @article.user || current_user.admin? %>
-    <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
-    <%= link_to "Delete this article", article_path(@article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"}, class: "btn btn-xs btn-danger" %>
-    <% end %>
-    <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success"%>
-  </div>
-  <% end %>
-</div></div></div>
+</div>
+</div>
