--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,26 +1,27 @@
-<h1 align="center">
-  Listing all articles
-</h1>
-<div class="row">
-  <div class="col-sm-6 offset-sm-3">
-    <div class="card-deck">
-      <% @users.each do |user| %>
-
-        <div class="card">
-          <%= link_to gravatar_for(user), user_path(user), class: 'card-img-top' %>
-          
-          <div class="card-body">
-            
-            <h5 class="card-title"><%= link_to user.username, user_path(user) %></h5>
-              <small class="text-muted"><%= pluralize(user.articles.count,"articles") if user.articles %></small>
-              <% if logged_in? and current_user.admin? %>
-                <%= link_to "Delete this user", user_path(user), class:"btn btn-danger", method: :delete, data: { confirm: "Are you sure you want to delete the user and all their articles"} %>
-              <% end %>
+<div class="container-fluid">
+  <div class="row">
+    <h1 align="center">
+      Listing all articles
+    </h1>
+    <div class="col-sm-8 offset-sm-2">
+      <div class="card-deck">
+        <% @users.each do |user| %>
+          <div class="col-sm-4">
+            <div class="card">
+              <%= link_to gravatar_for(user), user_path(user), class: 'card-img-top' %>
+                <div class="card-body">
+                  <h5 class="card-title">
+                    <%= link_to user.username, user_path(user) %>
+                  </h5>
+                  <small class="text-muted"><%= pluralize(user.articles.count,"articles") if user.articles %></small>
+                  <% if logged_in? and current_user.admin? %>
+                    <%= link_to "Delete this user", user_path(user), class:"btn btn-danger", method: :delete, data: { confirm: "Are you sure you want to delete the user and all their articles"} %>
+                      <% end %>
+                </div>
+            </div>
           </div>
-       
-        </div>
-        <% end %>
+          <% end %>
+      </div>
     </div>
-
   </div>
 </div>
