--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,9 +37,12 @@
   margin: 0;
   width: 100%;
   overflow: hidden;
+  h1 {
+    margin-top: 100px;
+  }
   .form-a-card {
     background: #fff;
-    margin-top: 120px;
+    margin: 120px auto 80px auto;
     padding: 1em 2em;
   }
 }
