--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,10 @@
-<div class="container-fluid">
+<div class="container-fluid form-a">
   <div class="row">
-    <h1 align="center">
-      Listing all articles
-    </h1>
     <div class="col-sm-8 offset-sm-2">
-      <div class="card-deck">
+      <h1 align="center">
+        Listing all articles
+      </h1>
+      <div class="card-deck form-a-card">
         <% @users.each do |user| %>
           <div class="col-sm-4">
             <div class="card">
