--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,6 +4,7 @@
       <h1 align="center">
         Listing all articles
       </h1>
+      <%= will_paginate %>
       <% @categories.each do |category| %>
         <ul class="listing">
           <li class="article-title">
@@ -11,6 +12,7 @@
           </li>
         </ul>
         <% end %>
+        <%= will_paginate %>
     </div>
   </div>
 </div>
