--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -33,7 +33,23 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <%= link_to "Edit your profile", edit_user_path(current_user), class:"dropdown-item" %>
             <%= link_to "View your profile", user_path(current_user), class:"dropdown-item" %>
-          
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+          Categories
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <%= link_to "All Categories", categories_path, class:"dropdown-item" %>
+          <div class="dropdown-divider"></div>
+          <% Category.all.each do |category| %>
+              <%= link_to "#{category.name}", category_path(category), class:"dropdown-item" %>
+          <% end %>
+          <% if logged_in? and current_user.admin? %>
+          <div class="dropdown-divider"></div>
+            <%= link_to "Create New Category", new_category_path, class:"dropdown-item" %>
+          <% end %>
         </div>
       </li>
       <li class="nav-item">
