Add categories to create article page

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -14,6 +14,12 @@
           </label>
           <%= f.text_area :description, class:"form-control", id:"description", placeholder:"Description" %>
         </div>
+        <div class="form-group">
+          
+          <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+            <% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class:"checkbox") + cb.text} %>
+          <% end %>
+        </div>
         <%= f.submit class:"btn btn-primary" %> 
         <%= link_to "Cancel", articles_path, class:"btn btn-danger" %>
       <% end %>
