--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -34,6 +34,10 @@
         <p class="card-text">
           <%= simple_format(@article.description) %>
         </p>
+        <!-- Same effect as using for each -->
+        <% if @article.categories.any? %>
+          <p>Categories <%= render @article.categories %></p>
+        <% end %>
       </div>
 
       <div class="card-footer">
