Add edit category feature

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,6 +5,9 @@
         <%= "Category: " + @category.name %>
       </h1>
       <div align="center">
+        <% if logged_in? and current_user.admin? %>
+        <span class="badge"><%= link_to "Edit category name", edit_category_path(@category) %></span>
+        <% end %>
         <%= will_paginate(@category_articles, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'justify-content-center') %>
 
       </div>
