--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid form-b">
   <div class="row">
     <div class="col-sm-6 offset-sm-3 form-b-card">
-      <h1 align="center">Create new category</h1>
+      <h1 align="center">Edit category</h1>
       <%= render 'form' %>
     </div>
   </div>
