--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,17 +1,4 @@
-
-<footer class="footer">
-  <ul class="nav bg-dark">
-    <li class="nav-item">
-      <%= link_to "About", about_path, class:"nav-link" %>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#">Disabled</a>
-    </li>
-  </ul>
+<!-- Footer Partial -->
+<footer class="footer bg-dark">
+  <p>Designed and built by Andrew Mason, 2018</p>
 </footer>
