--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,14 +1,14 @@
 <div class="card-deck articles-list-cards">
   <% obj.each do |article| %>
-    <div class="col-sm-6 col-md-6 col-lg-4">
+    <div class="col-sm-12">
       <div class="card">
         <div class="card-header">
           <%= article.title %>
         </div>
         <div class="card-body">
           <%= truncate(article.description, length: 100) %>
-            <small>Created by: <%= article.user.username if article.user %>,
-              last update <%= time_ago_in_words(article.updated_at) %> ago</small>
+            <p><small>Created by: <%= article.user.username if article.user %>,
+              last update <%= time_ago_in_words(article.updated_at) %> ago</small></p>
             <% if article.categories.any? %>
               <p>Categories:
                 <%= render article.categories %>
