--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/errors', obj: @article %>
-  <div class="row">
+  <div class="row form">
     <div class="col-12">
       <%= form_for @article do |f| %>
         <div class="form-group">
@@ -14,10 +14,9 @@
           </label>
           <%= f.text_area :description, class:"form-control", id:"description", placeholder:"Description" %>
         </div>
-        <div class="form-group">
-          
+        <div class="form-check form-check-inline">
           <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
-            <% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class:"checkbox") + cb.text} %>
+            <% cb.label(class: "form-check-label") {cb.check_box(class:"") + cb.text} %>
           <% end %>
         </div>
         <%= f.submit class:"btn btn-primary" %> 
