--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,9 +1,8 @@
-<div class="container-fluid form-a">
-  <div class="row">
-    <div class="col-sm-6 offset-sm-3 form-a-card">
-<h1>Create an article</h1>
-
-<%= render 'form' %>
+<div class="container-fluid create__form">
+    <div class="row">
+        <div class="col-sm-6 offset-sm-3 article--create__form">
+            <h1>Create an article</h1>
+            <%= render 'form' %>
+        </div>
     </div>
-    </div>  
-    </div>  
+</div>
