--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,14 +16,8 @@
         <%= link_to "Users", users_path, class:"nav-link" %>
       </li>
       <% if logged_in? %>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
-          Actions
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <%= link_to "New Article", new_article_path, class:"dropdown-item" %>
-        </div>
+      <li class="nav-item">
+          <%= link_to "New Article", new_article_path, class:"nav-link" %>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
@@ -43,17 +37,13 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <%= link_to "All Categories", categories_path, class:"dropdown-item" %>
           <div class="dropdown-divider"></div>
-          <% Category.all.each do |category| %>
-              <%= link_to "#{category.name}", category_path(category), class:"dropdown-item" %>
-          <% end %>
-          <% if logged_in? and current_user.admin? %>
-          <div class="dropdown-divider"></div>
-            <%= link_to "Create New Category", new_category_path, class:"dropdown-item" %>
-          <% end %>
+        <% Category.all.each do |category| %>
+            <%= link_to "#{category.name}", category_path(category), class:"dropdown-item" %>
+        <% end %>
         </div>
       </li>
       <li class="nav-item">
-        <%= link_to "Log out", logout_path, method: :delete, class:"nav-link" %>
+        <%= link_to "Log out", logout_path, method: :delete, class:"btn btn-outline-danger" %>
       </li>
       <% else %>
       <li class="nav-item">
