--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid edit__form">
   <div class="row">
     <div class="col-sm-6 offset-sm-3 article--edit__form">
-<h1>Edit existing articles</h1>
+<h1 class="headline">Edit existing articles</h1>
 
 <%= render 'form' %>
     </div>
