--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -26,6 +26,7 @@ $color__dark: #343a40;
   border-radius: 0;
   padding-top: 12em;
   color: white;
+  margin-bottom: 0;
   .btn {
     margin-top: 3em;
   }
@@ -49,9 +50,12 @@ $color__dark: #343a40;
     margin-top: 100px;
   }
   .form-a-card {
-    background: #fff;
+    // background: #fff;
     margin: 120px auto 80px auto;
     padding: 1em 2em;
+    .card {
+      margin-bottom: 25px;
+    }
   }
 }
 
@@ -81,8 +85,8 @@ $color__dark: #343a40;
       padding-top:120px;
     }
     .articles-list-cards {
-        margin: 40px auto 40px auto;
-        padding: 4em 2em;
+        margin: 48px auto 48px auto;
+        padding: 0 2em;
         .card {
           margin-bottom: 1em;
         }
@@ -125,5 +129,56 @@ footer {
     background: #fff;
     margin: 120px auto 80px auto;
     padding: 1em 2em;
+  }
+  .users--edit__form {
+    h1 {
+      color: $color__dark;
+    }
+    background: #fff;
+    margin: 120px auto 80px auto;
+    padding: 1em 2em;
+  }
+  
+}
+.headline {
+  color: #fff;
+}
+
+.user__show {
+  @include gradient--color(#ff5e26, #ff9966);
+  min-height: 85vh;
+  margin: 0;
+  width: 100%;
+  overflow: hidden;
+  h1 {
+    margin-top: 100px;
+  }
+
+  .user__card {
+    // background: #fff;
+    margin: 48px auto 48px auto;
+    padding: 0 2em;
+    .card {
+      margin-bottom: 25px;
+    }
+  }
+}
+
+.category__show {
+  @include gradient--color(#ff5e26, #ff9966);
+  min-height: 85vh;
+  margin: 0;
+  width: 100%;
+  overflow: hidden;
+  h1 {
+    margin-top: 100px;
+  }
+  .category__card {
+    background: #fff;
+    margin: 48px auto 48px auto;
+    padding: 0 2em;
+    .card {
+      margin-bottom: 25px;
+    }
   }
 }
