--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid articles-list">
   <div class="row">
     <div class="col-12 ">
-      <h1 align="center">
+      <h1 align="center" class="headline">
         Listing all articles
       </h1>
       <div align="center">
