--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,15 +1,15 @@
-<div class="container-fluid articles-list">
+<div class="container-fluid category__show">
+  <h1 align="center">
+   All Categories
+  </h1>
   <div class="row">
-    <div class="col-12 ">
-      <h1 align="center">
-        <%= "Category: " + @category.name %>
-      </h1>
+    <div class="col-sm-8 offset-sm-2 category__card">
+      
       <div align="center">
         <% if logged_in? and current_user.admin? %>
         <span class="badge"><%= link_to "Edit category name", edit_category_path(@category) %></span>
         <% end %>
         <%= will_paginate(@category_articles, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'justify-content-center') %>
-
       </div>
       <%= render 'articles/article', obj: @category_articles %>
         <div align="center">
@@ -18,4 +18,5 @@
         </div>
     </div>
   </div>
+</div>
 </div>
