--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,7 @@
-<h1 align="center">Edit your account</h1>
+<div class="container-fluid edit__form">
+  <div class="row">
+    <div class="col-sm-8 offset-sm-2 col-md-6 offset-md-3 users--edit__form">
+<h1 align="center" class="headline">Edit your account</h1>
 <%= render 'form' %>
+    </div></div>
+    </div>
