--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,21 @@
-<div class="container-fluid form-a">
+<div class="container-fluid user__show">
   <div class="row">
-    <div class="col-sm-8 offset-sm-2">
+    <div class="col-sm-8 offset-sm-2 col-md-6 offset-md-3">
       <h1 align="center">
-        Listing all articles
+        Listing all users
       </h1>
-      <div class="card-deck form-a-card">
+      <div class="card-deck user__card">
+        <div class="row">
         <% @users.each do |user| %>
-          <div class="col-sm-4">
-            <div class="card">
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="card" align="center" >
               <%= link_to gravatar_for(user), user_path(user), class: 'card-img-top' %>
                 <div class="card-body">
                   <h5 class="card-title">
                     <%= link_to user.username, user_path(user) %>
                   </h5>
                   <small class="text-muted"><%= pluralize(user.articles.count,"articles") if user.articles %></small>
+                  <br>
                   <% if logged_in? and current_user.admin? %>
                     <%= link_to "Delete this user", user_path(user), class:"btn btn-danger", method: :delete, data: { confirm: "Are you sure you want to delete the user and all their articles"} %>
                       <% end %>
@@ -21,6 +23,7 @@
             </div>
           </div>
           <% end %>
+      </div>
       </div>
     </div>
   </div>
