--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,15 @@
-<h1 align="center">
-  Welcome to <%= @user.username %>'s page
-</h1>
-<div class="row">
-  <div class="col-sm-6 offset-sm-3">
-    <%= gravatar_for @user, size: 150 %>
-  <h4 align="center">
-    <%= @user.username %>'s articles</h4>
+<div class="container-fluid user__show">
+  <div class="row">
+    <div class="col-sm-8 offset-sm-2 user__card">
+      <h1 class="headline" align="center">
+        Welcome to
+        <%= @user.username %>'s page
+      </h1>
+      
+      <%= gravatar_for @user, size: 150 %>
+      <br>
     <%= render 'articles/article', obj: @user.articles %>
-  </div>
+</div>
+</div>
+</div>
 </div>
