--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,8 @@
-<div class="container-fluid edit__form">
-  <div class="row">
-    <div class="col-sm-8 offset-sm-2 col-md-6 offset-md-3 users--edit__form">
-<h1 align="center" class="headline">Edit your account</h1>
-<%= render 'form' %>
-    </div></div>
+<main class="container">
+    <div class="row form">
+        <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+            <h1 class="h3 mb-3 font-weight-normal">Edit your account</h1>
+            <%= render 'form' %>
+        </div>
     </div>
+</main>
