--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,7 @@
-<div class="container-fluid form-b">
-  <div class="row">
-    <div class="col-sm-6 offset-sm-3 form-b-card">
-      <h1 align="center">New account</h1>
+<main class="container">
+  <div class="row form">
+    <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
       <%= render 'form' %>
     </div>
   </div>
-</div>
+</main>
