--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,184 +1,59 @@
-
-
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
-
-@mixin gradient--color($primary, $secondary) {
-      background: $primary;
-      /* fallback for old browsers */
-
-      background: -webkit-linear-gradient(to right, $primary, $secondary);
-      /* Chrome 10-25, Safari 5.1-6 */
-
-      background: linear-gradient(to right, $primary, $secondary);
-      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-
-$color__dark: #343a40;
-
-.jumbotron {
-  background-image: asset-url('jumbotron.jpg');
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-  width: 100%;
-  text-align: center;
-  border-radius: 0;
-  padding-top: 12em;
-  color: white;
-  margin-bottom: 0;
-  .btn {
-    margin-top: 3em;
-  }
-}
-.navbar-nav {
-  .nav-item {
-    margin-left: 24px;
-  }
-}
-.container {
-  padding-top: 80px;
-}
-
-.form-a {
-@include gradient--color(#ff5e26, #ff9966);
-  min-height: 85vh;
-  margin: 0;
-  width: 100%;
-  overflow: hidden;
-  h1 {
-    margin-top: 100px;
-  }
-  .form-a-card {
-    // background: #fff;
-    margin: 120px auto 80px auto;
-    padding: 1em 2em;
-    .card {
-      margin-bottom: 25px;
-    }
-  }
-}
-
-.form-b {
-@include gradient--color(#ff5e26, #ff9966);
-  min-height: 85vh;
-  height: 100%; 
-  margin: 0;
-  width: 100%;
-  // overflow: hidden;
-  .form-b-card {
-    background: #fff;
-    margin: 120px auto 80px auto;
-    padding: 1em 2em;
-  
-  }
-}
-.show-articles {
-@include gradient--color(#ff5e26, #ff9966);
-  .show-articles-row {
-    padding: 8em 4em;
-  }
-}
-.articles-list {
-@include gradient--color(#ff5e26, #ff9966);
-    > .row{
-      padding-top:120px;
-    }
-    .articles-list-cards {
-        margin: 48px auto 48px auto;
-        padding: 0 2em;
-        .card {
-          margin-bottom: 1em;
+@import "partials/reset.scss";
+.show {
+    margin-top: 56px;
+    text-align: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    .card-row {
+      .card-wrapper {
+        margin-bottom: 1.5rem;
+        .card{
+          
+          .card-img-top {
+            margin-top: 1em;
+          }
+          .card-body {
+            .categories {
+              bottom: 0;
+            }
+          }
         }
-    }
-}
-footer {
- padding: 24px;
- text-align: center;
- color: #ffffff;
-}
-
-.create__form {
-  @include gradient--color(#ff5e26, #ff9966);
-  min-height: 85vh;
-  margin: 0;
-  width: 100%;
-  overflow: hidden;
-  
-    .article--create__form {
-      h1 {
-        color: $color__dark;
       }
-    background: #fff;
-    margin: 120px auto 80px auto;
-    padding: 1em 2em;
-  }
-  
-}
-
-.edit__form {
-  @include gradient--color(#ff5e26, #ff9966);
-  min-height: 85vh;
-  margin: 0;
-  width: 100%;
-  overflow: hidden;
-  .article--edit__form {
-    h1 {
-      color: $color__dark;
     }
-    background: #fff;
-    margin: 120px auto 80px auto;
-    padding: 1em 2em;
-  }
-  .users--edit__form {
-    h1 {
-      color: $color__dark;
+}
+.form {
+  margin-top: 56px;
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  .form-signin,.form-signup,.form-edit {
+    width: 100%;
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+    .form-control {
+      position: relative;
+      box-sizing: border-box;
+      height: auto;
+      padding: 10px;
+      font-size: 16px;
+      &:focus {
+        z-index: 2;
+      }
     }
-    background: #fff;
-    margin: 120px auto 80px auto;
-    padding: 1em 2em;
-  }
-  
-}
-.headline {
-  color: #fff;
-}
-
-.user__show {
-  @include gradient--color(#ff5e26, #ff9966);
-  min-height: 85vh;
-  margin: 0;
-  width: 100%;
-  overflow: hidden;
-  h1 {
-    margin-top: 100px;
+    input[type="email"] {
+      margin-bottom: -1px;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+    input[type="password"] {
+      margin-bottom: 10px;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+    
   }
 
-  .user__card {
-    // background: #fff;
-    margin: 48px auto 48px auto;
-    padding: 0 2em;
-    .card {
-      margin-bottom: 25px;
-    }
-  }
-}
-
-.category__show {
-  @include gradient--color(#ff5e26, #ff9966);
-  min-height: 85vh;
-  margin: 0;
-  width: 100%;
-  overflow: hidden;
-  h1 {
-    margin-top: 100px;
-  }
-  .category__card {
-    background: #fff;
-    margin: 48px auto 48px auto;
-    padding: 0 2em;
-    .card {
-      margin-bottom: 25px;
-    }
-  }
 }
