--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,9 +1,8 @@
-<div class="container-fluid edit__form">
-  <div class="row">
-    <div class="col-sm-6 offset-sm-3 article--edit__form">
-<h1 class="headline">Edit existing articles</h1>
-
-<%= render 'form' %>
-    </div>
+<main class="container">
+    <div class="row form">
+        <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+            <h1 class="h3 mb-3 font-weight-normal">Edit existing articles</h1>
+                <%= render 'form' %>
+        </div>
     </div>  
-    </div>  
+</main>  
