--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,8 +1,8 @@
-<div class="container-fluid create__form">
-    <div class="row">
-        <div class="col-sm-6 offset-sm-3 article--create__form">
-            <h1>Create an article</h1>
+<main class="container">
+    <div class="row form">
+        <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+            <h1 class="h3 mb-3 font-weight-normal">Create a new article</h1>
             <%= render 'form' %>
         </div>
     </div>
-</div>
+</main>
