--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,54 +1,48 @@
-<div class="container-fluid show-articles">
-<h1 align="center">
-  Show
-</h1>
-<div class="row show-articles-row">
-  <div class="col-lg-2 col-md-3">
-    <div class="card-deck">
-      <% if @article.user %>
-        <div class="card">
-          <%= link_to gravatar_for(@article.user), user_path(@article.user), class: "card-img-top" %>
-
-            <div class="card-body">
-
-              <h5 class="card-title">
-                <%= link_to @article.user.username, user_path(@article.user) %>
-              </h5>
-              <small class="text-muted"><%= pluralize(@article.user.articles.count,"articles") if @article.user.articles %></small>
-            </div>
-
+<main class="container">
+  <div class="row show">
+    <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+      <h1 class="h3 mb-3 font-weight-normal">All our articles</h1>
+        <% if @article.user %>
+          <div class="card">
+            <%= link_to gravatar_for(@article.user), user_path(@article.user), class: "card-img-top" %>
+              <div class="card-body">
+                <h5 class="card-title">
+                  <%= link_to @article.user.username, user_path(@article.user) %>
+                </h5>
+                <small class="text-muted"><%= pluralize(@article.user.articles.count,"articles") if @article.user.articles %></small>
+              </div>
+          </div>
+          <% end %>
+      </div>
+    </div>
+    
+    <div class="col-lg-10 col-md-9">
+      <div class="card">
+        <h5 class="card-header">Title:
+          <%= @article.title %>
+        </h5>
+        <div class="card-body">
+          <h5 class="card-title">Description</h5>
+          <p class="card-text">
+            <%= simple_format(@article.description) %>
+          </p>
+          <!-- Same effect as using for each -->
+          <% if @article.categories.any? %>
+            <p>Categories
+              <%= render @article.categories %>
+            </p>
+            <% end %>
         </div>
-        <% end %>
-    </div>
 
-  </div>
+        <div class="card-footer">
+          <% if logged_in? && current_user == @article.user || current_user.admin? %>
+            <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+              <%= link_to "Delete this article", article_path(@article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"}, class: "btn btn-xs btn-danger" %>
+                <% end %>
+                  <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success"%>
+        </div>
 
-
-  <div class="col-lg-10 col-md-9">
-    <div class="card">
-      <h5 class="card-header">Title:
-        <%= @article.title %>
-      </h5>
-      <div class="card-body">
-        <h5 class="card-title">Description</h5>
-        <p class="card-text">
-          <%= simple_format(@article.description) %>
-        </p>
-        <!-- Same effect as using for each -->
-        <% if @article.categories.any? %>
-          <p>Categories <%= render @article.categories %></p>
-        <% end %>
       </div>
-
-      <div class="card-footer">
-        <% if logged_in? && current_user == @article.user || current_user.admin? %>
-          <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
-            <%= link_to "Delete this article", article_path(@article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"}, class: "btn btn-xs btn-danger" %>
-              <% end %>
-                <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success"%>
-      </div>
-      
     </div>
   </div>
-</div>
 </div>
