--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,12 +1,14 @@
 <%= render 'shared/errors', obj: @category %>
-  <%= form_for @category do |f| %>
-    <div class="form-group">
-      <label for="title">
-            <%= f.label :name %>
-          </label>
-      <%= f.text_field :name, class:"form-control", id:"name", placeholder:"Category name"%>
-    </div>
 
-    <%= f.submit class: "btn btn-primary" %>
-      <%= link_to "Cancel", articles_path, class:"btn btn-danger" %>
-        <% end %>
+<%= form_for @category, class: "form-edit" do |f| %>
+  <div class="form-group">
+    <label for="title" class="sr-only">
+          <%= f.label :name %>
+        </label>
+    <%= f.text_field :name, class:"form-control", id:"name", placeholder:"Category name"%>
+  </div>
+
+  <%= f.submit class:"btn btn-lg btn-primary btn-block" %>
+  <br>
+  <%= link_to "Cancel", articles_path, class:"btn btn-sm btn-danger" %>
+      <% end %>
