--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,22 +1,14 @@
-<div class="container-fluid category__show">
-  <h1 align="center">
-   All Categories
-  </h1>
-  <div class="row">
-    <div class="col-sm-8 offset-sm-2 category__card">
-      
+<main class="container">
+  <div class="row show">
+    <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+      <h1 class="h3 mb-3 font-weight-normal">All categories</h1>
       <div align="center">
         <% if logged_in? and current_user.admin? %>
         <span class="badge"><%= link_to "Edit category name", edit_category_path(@category) %></span>
         <% end %>
-        <%= will_paginate(@category_articles, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'justify-content-center') %>
       </div>
       <%= render 'articles/article', obj: @category_articles %>
-        <div align="center">
-          <%= will_paginate(@category_articles, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'justify-content-center') %>
-
-        </div>
+        
     </div>
   </div>
-</div>
-</div>
+</main>
