--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,28 +1,29 @@
 <%= render 'shared/errors', obj: @user %>
 
-      <%= form_for @user do |f| %>
-        <div class="form-group">
-          <label for="title">
+  <%= form_for @user, class: "form-signup" do |f| %>
+    <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+    <!-- <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1> -->
+    <div class="form-group">
+      <label for="title" class="sr-only">
             <%= f.label :username %>
           </label>
-          <%= f.text_field :username, class:"form-control", id:"username", placeholder:"Enter username"%>
-        </div>
-        <div class="form-group">
-          <label for="email">
+      <%= f.text_field :username, class:"form-control", id:"username", placeholder:"Enter username"%>
+    </div>
+    <div class="form-group">
+      <label for="email" class="sr-only">
             <%= f.label :email %>
           </label>
-          <%= f.email_field :email, class:"form-control", id:"email", placeholder:"Enter email"%>
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
-        <div class="form-group">
-          <label for="passsword">
+      <%= f.email_field :email, class:"form-control", id:"email", placeholder:"Enter email", autofill:"false"%>
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+      <label for="passsword" class="sr-only">
             <%= f.label :password %>
           </label>
-          <%= f.password_field :password, class:"form-control", id:"password", placeholder:"Enter password"%>
-            <small id="passwordHelp" class="form-text text-muted">Make sure it is secure!</small>
-        </div>
-        <%= f.submit(@user.new_record? ? "Sign up" : "Updated account",class:"btn btn-primary") %>
-          <%= link_to "Cancel", articles_path, class:"btn btn-danger" %>
-            <% end %>
-
-   
+      <%= f.password_field :password, class:"form-control", id:"password", placeholder:"Enter password"%>
+        <small id="passwordHelp" class="form-text text-muted">Make sure it is secure!</small>
+    </div>
+    <%= f.submit(@user.new_record? ? "Sign up" : "Updated account",class:"btn btn-lg btn-primary btn-block") %>
+      <br>
+      <%= link_to "Cancel", articles_path, class:"btn btn-sm btn-danger" %>
+        <% end %>
