--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,11 @@
-<div class="container-fluid user__show">
-  <div class="row">
-    <div class="col-sm-8 offset-sm-2 user__card">
-      <h1 class="headline" align="center">
-        Welcome to
-        <%= @user.username %>'s page
-      </h1>
-      
+<main class="container">
+  <div class="row show">
+    <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+          <h1 class="h3 mb-3 font-weight-normal"> Welcome to <%= @user.username %>'s page</h1>
       <%= gravatar_for @user, size: 150 %>
       <br>
     <%= render 'articles/article', obj: @user.articles %>
 </div>
 </div>
 </div>
-</div>
+</main>
