--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,8 @@
 <!-- Footer Partial -->
 <footer class="footer bg-dark">
-  <p>Designed and built by Andrew Mason, 2018</p>
+  <div class="row">
+    <div class="col-sm-8 offset-sm-2 col-md-6 offset-md-3">
+      <p>Designed and built by Andrew Mason, 2018</p>
+    </div>
+  </div>
 </footer>
