--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <h1 class="display-4">Hello, world!</h1>
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p>Welcome to the complete rails development course project - Alpha Blog.</p>
   <p class="lead">
   <%= link_to "Sign up now", signup_path, class: "btn btn-primary btn-lg", role: "button" %>
   </p>
