--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,5 +1,6 @@
 <% if obj.errors.any? %>
-  <div class="row">
+<div class="container">
+  <div class="row errors">
     <div class="col-12">
       <div class="card text-center">
         <div class="card-header text-white bg-danger">
@@ -16,5 +17,6 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
   <% end %>
