--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,8 +1,9 @@
-<div class="container-fluid form-b">
-  <div class="row">
-    <div class="col-sm-6 offset-sm-3 form-b-card">
-      <h1 align="center">Create new category</h1>
+<main class="container">
+  <div class="row form bg-white">
+    <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+      <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+      <h1 class="h3 mb-3 font-weight-normal">Create new category</h1>
       <%= render 'form' %>
     </div>
   </div>
-</div>
+</main>
