--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,8 @@
 <main class="container">
-    <div class="row form">
+    <div class="row form bg-white">
         <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
-            <h1 class="h3 mb-3 font-weight-normal">Edit your account</h1>
+          <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+          <h1 class="h3 mb-3 font-weight-normal">Edit your account</h1>
             <%= render 'form' %>
         </div>
     </div>
