--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,28 @@
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
 @import "partials/reset.scss";
+
+@mixin gradient{
+  background: #2980b9;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2c3e50, #2980b9);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2c3e50, #2980b9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+$bg-dark: #343a40;
+body {
+  @include gradient;
+  height: 100%;
+}
+.bg-white {
+  background: #fff;
+  @media screen and (min-width: 768px) {
+    margin-top: 8em !important;
+  }
+}
+.text-white {
+  color: #fff;
+}
 .show {
     margin-top: 56px;
     text-align: center;
@@ -71,10 +93,37 @@
   padding: 1em 0;
 }
 .jumbotron {
-  height: 90vh;
+  height: 100vh;
+  width: 100%;
   text-align: center;
   margin-bottom: 0 !important;
+  background-image: asset-url('jumbotron.jpg');
+  background-size: cover;
+  background-position: center;
   .display-4 {
     padding-top: 2em;
   }
+}
+.errors {
+  //margin-bottom: 2em;
+  .card-body {
+    background: $bg-dark;
+    .list-group-item {
+      color: #fff;
+      background: $bg-dark;
+    }
+  }
+}
+.card {
+  margin-bottom: 1em;
+}
+.card-img-top {
+  margin-top: 1em;
+}
+.view-articles {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+.card-categories {
+  margin-bottom: 0;
 }
