--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
 <main class="container">
-    <div class="row form">
+    <div class="row form bg-white">
         <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
             <h1 class="h3 mb-3 font-weight-normal">Create a new article</h1>
             <%= render 'form' %>
