--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,7 @@
 <main class="container">
   <div class="row show">
     <div class="col-xs-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
-      <h1 class="h3 mb-3 font-weight-normal">All Categories</h1>
+      <h1 class="h3 mb-3 font-weight-normal text-white">All Categories</h1>
       <div class="row card-row">
         <% @categories.each do |category| %>
           <div class="col-sm-6 card-wrapper">
