--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row">
   <div class="col-12">
     <% flash.each do |name, msg| %>
@@ -9,6 +10,7 @@
       </div>
       <% end %>
   </div>
+</div>
 </div>
 
 
