--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <!-- <a class="navbar-brand" id="logo" href="#">Alpha Blog</a> -->
   <%= link_to "Alpha Blog", root_path, class:"navbar-brand", id:"logo" %>
@@ -36,6 +37,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <%= link_to "All Categories", categories_path, class:"dropdown-item" %>
+          <%=	 link_to "Create Category", new_category_path, class:"dropdown-item" if current_user.admin? %>
           <div class="dropdown-divider"></div>
         <% Category.all.each do |category| %>
             <%= link_to "#{category.name}", category_path(category), class:"dropdown-item" %>
@@ -57,3 +59,4 @@
     
   </div>
 </nav>
+</div>
