--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <main class="container">
-  <div class="row show">
+  <div class="row show bg-white">
     <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
           <h1 class="h3 mb-3 font-weight-normal"> Welcome to <%= @user.username %>'s page</h1>
       <%= gravatar_for @user, size: 150 %>
