--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <main class="container">
-  <div class="row show">
+  <div class="row show-wrapper">
     <div class="col-xs-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
       <h1 class="h3 mb-3 font-weight-normal text-white">All our users</h1>
       <div class="row card-row">
